Modernize NIO2 use
Paths.get() is the same as Path.of().

Change-Id: I71dacca697c85217de74fdb69b57fc262e0ca4f4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>